--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./index.css">
+    <script src="./index.js" defer></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React Examples</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="calc">
+      <span id="counter">0</span>
+      <div class="btns-wrapper">
+        <input type="button" value="+" id="btn-inc">
+        <input type="button" value="-" id="btn-dec">
+      </div>
+    </div>
   </body>
 </html>
